Revert "Fixed click not working on ios"
This reverts commit d3732d1e946bc080cccb0d9c1aab693545ebef7c.

--- a/style.css
+++ b/style.css
@@ -59,10 +59,6 @@ body{
     margin-left: -100%
 }    
 
-.inner_main_menu ul li:hover {
-    cursor: pointer;
-}
-
 .inner_main_menu ul li a:hover{
     color: #6FDA44;
 }  
